Fix credits on smaller screens

--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -79,6 +79,9 @@
 			grid-column: 1;
 			grid-row: 3;
 		}
+		.credits {
+			grid-column: 1;
+		}
 	}
 }
 
